remove basic auth

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>内村文化祭’21 満面</title>
-    <meta name="description" content="ウッチャンナンチャンファンの皆さま必見！内村文化祭’21 満面ではTシャツ、ハンドタオル、トートバッグ、キーホルダーなどの人気グッズを数量限定で販売中です！購入をご希望の方はぜひご利用ください！">
+    <meta name="description" content="ウッチャンナンチャンファンの皆さま必見！内村文化祭’21 満面ではTシャツ、ハンドタオル、トートバッグなどの人気グッズを数量限定で販売中です！購入をご希望の方はぜひご利用ください！">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon-logo-ver1.0.png">
 
     <meta property="og:url" content="https://uchimura-live2021.selforder.live/">
     <meta property="og:title" content="内村文化祭’21 満面">
     <meta property="og:site_name" content="内村文化祭’21 満面">
-    <meta property="og:description" content="ウッチャンナンチャンファンの皆さま必見！内村文化祭’21 満面ではTシャツ、ハンドタオル、トートバッグ、キーホルダーなどの人気グッズを数量限定で販売中です！購入をご希望の方はぜひご利用ください！">
+    <meta property="og:description" content="ウッチャンナンチャンファンの皆さま必見！内村文化祭’21 満面ではTシャツ、ハンドタオル、トートバッグなどの人気グッズを数量限定で販売中です！購入をご希望の方はぜひご利用ください！">
     <meta property="og:image" content="https://uchimura-live2021.selforder.live/images/ogp_image.png">
     <meta property="og:type" content="website">
 
