--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
       <section class="section-schedule">
         <h2>
-          <img src="images/schedule.png" alt="ウッチャンナンチャンのファンの皆さま必見！大人気グッズを期間限定で取り揃えました！" class="pc">
+          <img src="images/schedule_pc.png" alt="ウッチャンナンチャンのファンの皆さま必見！大人気グッズを期間限定で取り揃えました！" class="pc">
           <img src="images/schedule_sp.png" alt="ウッチャンナンチャンのファンの皆さま必見！大人気グッズを期間限定で取り揃えました！" class="sp">
         </h2>
       </section>
